--- a/generic.html
+++ b/generic.html
@@ -1,232 +1,103 @@
 <!DOCTYPE HTML>
 <!--
-	Striped by HTML5 UP
+	Phantom by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 <head>
-	<title>Striped by HTML5 UP</title>
+	<title>Generic - Phantom by HTML5 UP</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
+<!-- Wrapper -->
+<div id="wrapper">
 
-<!-- Content -->
-<div id="content">
-	<div class="inner">
+	<!-- Header -->
+	<header id="header">
+		<div class="inner">
 
-		<!-- Post -->
-		<article class="box post post-excerpt">
-			<header>
-				<!--
-                    Note: Titles and subtitles will wrap automatically when necessary, so don't worry
-                    if they get too long. You can also remove the <p> entirely if you don't
-                    need a subtitle.
-                -->
-				<h2><a href="#">Welcome to Striped</a></h2>
-				<p>A free, fully responsive HTML5 site template by HTML5 UP</p>
-			</header>
-			<div class="info">
-				<!--
-                    Note: The date should be formatted exactly as it's shown below. In particular, the
-                    "least significant" characters of the month should be encapsulated in a <span>
-                    element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
-                    Oh, and if you don't need a date for a particular page or post you can simply delete
-                    the entire "date" element.
+			<!-- Logo -->
+			<a href="index.html" class="logo">
+				<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+			</a>
 
-                -->
-				<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">14</span><span class="year">, 2014</span></span>
-				<!--
-                    Note: You can change the number of list items in "stats" to whatever you want.
-                -->
-				<ul class="stats">
-					<li><a href="#" class="icon fa-comment">16</a></li>
-					<li><a href="#" class="icon fa-heart">32</a></li>
-					<li><a href="#" class="icon brands fa-twitter">64</a></li>
-					<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
+			<!-- Nav -->
+			<nav>
+				<ul>
+					<li><a href="#menu">Menu</a></li>
 				</ul>
-			</div>
-			<a href="#" class="image featured"><img src="assets/portfolio%20pics/tau1.jpg" alt="" /></a>
-			<p>
-				<strong>Hello!</strong> You're looking at <strong>Striped</strong>, a fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a>
-				for <a href="http://html5up.net">HTML5 UP</a> It features a clean, minimalistic design, styling for all basic page elements (including blockquotes, tables and lists), a
-				repositionable sidebar (left or right), and HTML5/CSS3 code designed for quick and easy customization (see code comments for details).
-			</p>
-			<p>
-				Striped is released for free under the <a href="http://html5up.net/license">Creative Commons Attribution license</a> so feel free to use it for personal projects
-				or even commercial ones &ndash; just be sure to credit <a href="http://html5up.net">HTML5 UP</a> for the design. If you like what you see here, be sure to check out
-				<a href="http://html5up.net">HTML5 UP</a> for more cool designs or follow me on <a href="http://twitter.com/ajlkn">Twitter</a> for new releases and updates.
-			</p>
-		</article>
+			</nav>
 
-		<!-- Post -->
-		<article class="box post post-excerpt">
-			<header>
-				<h2><a href="#">Lorem ipsum dolor sit amet</a></h2>
-				<p>Feugiat interdum sed commodo ipsum consequat dolor nullam metus</p>
-			</header>
-			<div class="info">
-				<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">8</span><span class="year">, 2014</span></span>
-				<ul class="stats">
-					<li><a href="#" class="icon fa-comment">16</a></li>
-					<li><a href="#" class="icon fa-heart">32</a></li>
-					<li><a href="#" class="icon brands fa-twitter">64</a></li>
-					<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
-				</ul>
-			</div>
-			<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-			<p>
-				Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus.
-				Nunc nulla velit, fermentum quis interdum quis, tate etiam commodo lorem ipsum dolor sit amet dolore.
-				Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus.
-				Nunc nulla velit, fermentum quis interdum quis, convallis eu sapien. Integer sed ipsum ante.
-			</p>
-		</article>
-
-		<!-- Pagination -->
-		<div class="pagination">
-			<!--<a href="#" class="button previous">Previous Page</a>-->
-			<div class="pages">
-				<a href="#" class="active">1</a>
-				<a href="#">2</a>
-				<a href="#">3</a>
-				<a href="#">4</a>
-				<span>&hellip;</span>
-				<a href="#">20</a>
-			</div>
-			<a href="#" class="button next">Next Page</a>
 		</div>
+	</header>
 
-	</div>
-</div>
-
-<!-- Sidebar -->
-<div id="sidebar">
-
-	<!-- Logo -->
-	<h1 id="logo"><a href="#">STRIPED</a></h1>
-
-	<!-- Nav -->
-	<nav id="nav">
+	<!-- Menu -->
+	<nav id="menu">
+		<h2>Menu</h2>
 		<ul>
-			<li class="current"><a href="#">Latest Post</a></li>
-			<li><a href="#">Archives</a></li>
-			<li><a href="#">About Me</a></li>
-			<li><a href="#">Contact Me</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="generic.html">Ipsum veroeros</a></li>
+			<li><a href="generic.html">Tempus etiam</a></li>
+			<li><a href="generic.html">Consequat dolor</a></li>
+			<li><a href="elements.html">Elements</a></li>
 		</ul>
 	</nav>
 
-	<!-- Search -->
-	<section class="box search">
-		<form method="post" action="#">
-			<input type="text" class="text" name="search" placeholder="Search" />
-		</form>
-	</section>
-
-	<!-- Text -->
-	<section class="box text-style1">
+	<!-- Main -->
+	<div id="main">
 		<div class="inner">
-			<p>
-				<strong>Striped:</strong> A free and fully responsive HTML5 site
-				template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a>
-			</p>
+			<h1>Generic Page</h1>
+			<span <img src="assets/portfolio pics/tau1.jpg" height="300" width="400"/></span>
+			<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
+			<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
 		</div>
-	</section>
+	</div>
 
-	<!-- Recent Posts -->
-	<section class="box recent-posts">
-		<header>
-			<h2>Recent Posts</h2>
-		</header>
-		<ul>
-			<li><a href="#">Lorem ipsum dolor</a></li>
-			<li><a href="#">Feugiat nisl aliquam</a></li>
-			<li><a href="#">Sed dolore magna</a></li>
-			<li><a href="#">Malesuada commodo</a></li>
-			<li><a href="#">Ipsum metus nullam</a></li>
-		</ul>
-	</section>
-
-	<!-- Recent Comments -->
-	<section class="box recent-comments">
-		<header>
-			<h2>Recent Comments</h2>
-		</header>
-		<ul>
-			<li>case on <a href="#">Lorem ipsum dolor</a></li>
-			<li>molly on <a href="#">Sed dolore magna</a></li>
-			<li>case on <a href="#">Sed dolore magna</a></li>
-		</ul>
-	</section>
-
-	<!-- Calendar -->
-	<section class="box calendar">
+	<!-- Footer -->
+	<footer id="footer">
 		<div class="inner">
-			<table>
-				<caption>July 2014</caption>
-				<thead>
-				<tr>
-					<th scope="col" title="Monday">M</th>
-					<th scope="col" title="Tuesday">T</th>
-					<th scope="col" title="Wednesday">W</th>
-					<th scope="col" title="Thursday">T</th>
-					<th scope="col" title="Friday">F</th>
-					<th scope="col" title="Saturday">S</th>
-					<th scope="col" title="Sunday">S</th>
-				</tr>
-				</thead>
-				<tbody>
-				<tr>
-					<td colspan="4" class="pad"><span>&nbsp;</span></td>
-					<td><span>1</span></td>
-					<td><span>2</span></td>
-					<td><span>3</span></td>
-				</tr>
-				<tr>
-					<td><span>4</span></td>
-					<td><span>5</span></td>
-					<td><a href="#">6</a></td>
-					<td><span>7</span></td>
-					<td><span>8</span></td>
-					<td><span>9</span></td>
-					<td><a href="#">10</a></td>
-				</tr>
-				<tr>
-					<td><span>11</span></td>
-					<td><span>12</span></td>
-					<td><span>13</span></td>
-					<td class="today"><a href="#">14</a></td>
-					<td><span>15</span></td>
-					<td><span>16</span></td>
-					<td><span>17</span></td>
-				</tr>
-				<tr>
-					<td><span>18</span></td>
-					<td><span>19</span></td>
-					<td><span>20</span></td>
-					<td><span>21</span></td>
-					<td><span>22</span></td>
-					<td><a href="#">23</a></td>
-					<td><span>24</span></td>
-				</tr>
-				<tr>
-					<td><a href="#">25</a></td>
-					<td><span>26</span></td>
-					<td><span>27</span></td>
-					<td><span>28</span></td>
-					<td class="pad" colspan="3"><span>&nbsp;</span></td>
-				</tr>
-				</tbody>
-			</table>
+			<section>
+				<h2>Get in touch</h2>
+				<form method="post" action="#">
+					<div class="fields">
+						<div class="field half">
+							<input type="text" name="name" id="name" placeholder="Name" />
+						</div>
+						<div class="field half">
+							<input type="email" name="email" id="email" placeholder="Email" />
+						</div>
+						<div class="field">
+							<textarea name="message" id="message" placeholder="Message"></textarea>
+						</div>
+					</div>
+					<ul class="actions">
+						<li><input type="submit" value="Send" class="primary" /></li>
+					</ul>
+				</form>
+			</section>
+			<section>
+				<h2>Follow</h2>
+				<ul class="icons">
+					<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+					<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
+					<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+					<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+			</section>
+			<ul class="copyright">
+				<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
 		</div>
-	</section>
-
-	<!-- Copyright -->
-	<ul id="copyright">
-		<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-	</ul>
+	</footer>
 
 </div>
 
